xine-ui (0.99.7) unstable; urgency=low
  (add entries here, newest at the top)

  * "ToggleFullscreen" command takes an optional numeric parameter,
    controlling whether full-screen mode is switched on or off.
  * New command "Close".
  * Rename default.avi to default.mpv since it's actually an MPEG.
  * Replace the splash .mpv with a PNG (from xine-lib).
  * Support use of JPEG images for splash etc.
  * Make use of XScreenSaver.
  * Set dialogue windows' maximum sizes.
  * Fix LIRC check so that it doesn't fail if liblircclient0.pc (which is
    Debian-specific) is missing.
  * Recognise "authentication needed" messages from xine-lib 1.2.
  * Handle "file is empty" messages from xine-lib.
  * Add support for XINE_EVENT_MRL_REFERENCE_EXT.
  * Use re-entrant XML parser functions (if available).
  * Distribute xine_splash.xcf (source for xine_splash.png).
  * Tidy up building of common function libraries; ensure all replacement
    function sources are distributed.
  * xine.desktop now says that xine can accept files or URLs.

xine-ui (0.99.6) unstable; urgency=low

  * Use pkg-config only; xine-config is deprecated.
  * Fix build with libpng 1.4.
  * Fix build on Mac OS X.
  * Fix segfaults caused by our getline() (only used if no system getline()).
  * Add front-end support for .ass subtitles.
  * Point xine-bugreport at the current bugs list; note the bug tracker URL.
  * Disable character substitution code (xine bug 30). Let's see what breaks...
  * Set menu windows' override-redirect flag (xine bug 24)
  * Automatically load opensubtitle-like filenames <name>.*.<subext>
  * New/updated spanish manpage translations from Carlos E. Robinson
  * Fixed possible corruption and overflow of keybindings table
  * Mark the toolbar window as such; should fix control panel visibility issues
    in full-screen mode with some window managers. [bug SF 1750100]
  * New command/keybinding from Richard van Paasen: